force-app/main/default/objects/config__c/config__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>config</label>
</CustomObject>