force-app/main/default/objects/config__c/fields/Check_Box_Value__c.field-meta.xml
<CustomField>
    <fullName>Check_Box_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Box Value</label>
    <type>Checkbox</type>
</CustomField>