force-app/main/default/objects/config__c/fields/Description_Value__c.field-meta.xml
<CustomField>
    <fullName>Description_Value__c</fullName>
    <label>Description Value</label>
    <type>TextArea</type>
</CustomField>